--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/node": "^20.2.5",
+    "axios": "^1.4.0",
     "vue": "^3.2.47",
     "vue-router": "4"
   },
