--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/node": "^20.2.5",
     "axios": "^1.4.0",
+    "element-plus": "^2.3.5",
     "vue": "^3.2.47",
     "vue-router": "4"
   },
