--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,6 @@
 FROM golang:1.20.5-alpine3.18
 WORKDIR /data/server
 COPY . ./
-go build -tags netgo -o app
+RUN go build -tags netgo -ldflags "-s -w" -o app
 EXPOSE 8081
 CMD [ "./app" ]
