--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,11 @@
 FROM golang:1.20.5-alpine3.18
 WORKDIR /data/server
 COPY . ./
-RUN go build -tags netgo -ldflags "-s -w" -o app
-EXPOSE 8081
+RUN go build -tags netgo -ldflags "-s -w" -o app &&\
+    mkdir /data/app && \
+    mv ./app /data/app/ && \
+    mv ./conf /data/app/ && \
+    cd /data/app && \
+    rm -rf /data/server
+
 CMD [ "./app" ]
