--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -5,10 +5,10 @@ RUN go build -tags netgo -ldflags "-s -w" -o app &&\
     mkdir /data/app && \
     mv ./app /data/app/ && \
     mv ./conf /data/app/ && \
-    cd /data/app && \
     rm -rf /data/server
 
 EXPOSE 8081
+WORKDIR /data/app
 
 
 CMD [ "./app" ]
