--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,14 +1,15 @@
-FROM golang:1.20.5-alpine3.18
+FROM golang:1.20.5-alpine3.18 as builder
 WORKDIR /data/server
 COPY . ./
-RUN go build -tags netgo -ldflags "-s -w" -o app &&\
-    mkdir /data/app && \
-    mv ./app /data/app/ && \
-    mv ./conf /data/app/ && \
-    rm -rf /data/server
+RUN set -x &&   \
+    go env -w  GOPROXY=https://goproxy.cn,direct && \
+    go build -tags netgo -ldflags "-s -w" -o app 
 
-EXPOSE 8081
+FROM alpine:3.18 as runner
+
 WORKDIR /data/app
 
+COPY --from=builder /data/server/app  ./
+COPY --from=builder /data/server/conf ./conf
 
-CMD [ "./app" ]
+CMD ["./app"]
